@@ -158,7 +158,7 @@ dl.bolddt-indentdd {
 }
 
 .docitem {
-	margin-top: 20px;
+	margin-top: 5px;
 	margin-left: 20px;
 	margin-bottom: 20px;
 }
